--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -19,7 +19,7 @@ License: Artistic-2.0
 LazyLoad: yes
 Depends: R (>= 2.11.0), IRanges, GenomicRanges, methods
 Imports: grDevices, gplots
-Suggests: rtracklayer, tcltk
+Suggests: rtracklayer, tcltk, gplots
 biocViews: Annotation, Genetics, Infrastructure, DataRepresentation,
         Bioinformatics
 URL: http://genometricorr.sourceforge.net/
