A lot of changes Harris did to go to 1.1.11

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,10 @@
-export('GenometriCorrelation','VisualiseTwoIRanges','MapRangesToGenomicIntervals')
-import('IRanges','GenomicRanges','methods')
-importFrom('grDevices','as.raster','rainbow')
-importFrom('gplots','colorpanel')
-exportClasses('GenometriCorrConfig','GenometriCorrResult')
-exportMethods('show','graphical.report','run.config','visualize')
+import('IRanges', 'GenomicRanges', 'methods')
+importFrom('S4Vectors', 'nrun', 'runValue')
+importFrom('rtracklayer', 'import')
+importFrom('grDevices', 'as.raster', 'rainbow')
+importFrom('gplots', 'colorpanel')
+importFrom('tcltk', 'tkProgressBar', 'setTkProgressBar', 'getTkProgressBar')
+importFrom('GenomeInfoDb', 'seqlevels', 'seqlevels<-', 'seqlengths')
+export('GenometriCorrelation', 'VisualiseTwoIRanges', 'MapRangesToGenomicIntervals')
+exportClasses('GenometriCorrConfig', 'GenometriCorrResult')
+exportMethods('show', 'graphical.report', 'run.config', 'visualize')
