--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -13,8 +13,7 @@ Maintainer: Alexander Favorov <favorov@sensi.org>
 Description: The package computes correlations between two genome annotations (known features, experimental data etc) that are represented as intervals on chromosomes. The package provides several different tests, each chosen for its particular sensitivity to a type of spatial correlation. The overarching question is whether the two interval sets are spatially related in any way. Tests can also be restricted to genomic intervals (chromosomes, chromosome arms, genes only, etc) when appropriate. Various visualization methods are provided. We emphasize that the package is intended to be a hypothesis generator; users should plan to follow up on any correlations suggested by the software.
 License: Artistic-2.0
 LazyLoad: yes
-Depends: R (>= 3.1.0), IRanges, GenomicRanges, methods, tcltk,
-        S4Vectors, GenomeInfoDb
+Depends: R (>= 3.1.0), IRanges, GenomicRanges, methods, tcltk, S4Vectors
 Imports: grDevices, gplots, rtracklayer
 biocViews: Annotation, Genetics, Infrastructure, DataRepresentation,
         Bioinformatics
