--- a/pkg/inst/extdata/quick-config.ini
+++ b/pkg/inst/extdata/quick-config.ini
@@ -41,7 +41,7 @@ chrM=16571
 [options]
 add.chr.as.prefix=FALSE
 awhole.only=FALSE
-supress.evaluated.length.warning=FALSE
+suppress.evaluated.length.warning=FALSE
 cut.all.over.length=FALSE
 keep.distributions=TRUE
 showTkProgressBar=TRUE
