Progrees bars are switched off in ini

--- a/pkg/inst/extdata/mapping-config.ini
+++ b/pkg/inst/extdata/mapping-config.ini
@@ -45,8 +45,8 @@ add.chr.as.prefix=FALSE
 awhole.only=FALSE
 suppress.evaluated.length.warning=FALSE
 cut.all.over.length=FALSE
-keep.distributions=TRUE
-showTkProgressBar=TRUE
+keep.distributions=FALSE
+showTkProgressBar=FALSE
 showProgressBar=FALSE
 
 [tests]
