no Tk termometer in example

--- a/pkg/inst/extdata/template-config.ini
+++ b/pkg/inst/extdata/template-config.ini
@@ -44,7 +44,7 @@ awhole.only=FALSE
 suppress.evaluated.length.warning=FALSE
 cut.all.over.length=FALSE
 keep.distributions=TRUE
-showTkProgressBar=TRUE
+showTkProgressBar=FALSE
 showProgressBar=FALSE
 
 [tests]
