--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,6 +4,6 @@ importFrom('grDevices', 'as.raster', 'rainbow')
 importFrom('gplots', 'colorpanel')
 importFrom('tcltk', 'tkProgressBar', 'setTkProgressBar', 'getTkProgressBar')
 importFrom('GenomeInfoDb', 'seqlevels', 'seqlevels<-', 'seqlengths')
-export('GenometriCorrelation', 'VisualiseTwoIRanges', 'MapRangesToGenomicIntervals')
+export('GenometriCorrelation', 'VisualiseTwoIRanges', 'VisualiseTwoGRanges', 'MapRangesToGenomicIntervals')
 exportClasses('GenometriCorrConfig', 'GenometriCorrResult')
 exportMethods('show', 'graphical.report', 'run.config', 'visualize')
