R cmd check still OK for 1.1.17, fixing import

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,6 @@
 import('IRanges', 'GenomicRanges', 'GenomicFeatures', 'methods','TxDb.Hsapiens.UCSC.hg19.knownGene')
 importFrom('rtracklayer', 'import')
-importMethodsFrom('S4Vectors','subjectHits','queryHits')
+importFrom('S4Vectors','subjectHits','queryHits')
 importFrom('grDevices', 'as.raster', 'rainbow')
 importFrom('gplots', 'colorpanel')
 importFrom('tcltk', 'tkProgressBar', 'setTkProgressBar', 'getTkProgressBar')
