--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -14,9 +14,41 @@ import(GenomicFeatures)
 import(GenomicRanges)
 import(IRanges)
 import(methods)
+importFrom(GenomeInfoDb,"seqlevels<-")
+importFrom(GenomeInfoDb,seqlengths)
+importFrom(GenomeInfoDb,seqlevels)
 importFrom(grDevices,as.raster)
+importFrom(grDevices,colorRamp)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,dev.size)
+importFrom(grDevices,pdf)
 importFrom(grDevices,rainbow)
+importFrom(grDevices,rgb)
+importFrom(graphics,axis)
+importFrom(graphics,hist)
+importFrom(graphics,layout)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,plot.new)
+importFrom(graphics,rasterImage)
+importFrom(graphics,text)
+importFrom(graphics,xinch)
 importFrom(rtracklayer,import)
+importFrom(stats,ecdf)
+importFrom(stats,integrate)
+importFrom(stats,ks.test)
+importFrom(stats,pbinom)
+importFrom(stats,punif)
+importFrom(stats,runif)
 importFrom(tcltk,getTkProgressBar)
 importFrom(tcltk,setTkProgressBar)
 importFrom(tcltk,tkProgressBar)
+importFrom(utils,getTxtProgressBar)
+importFrom(utils,head)
+importFrom(utils,packageDescription)
+importFrom(utils,read.table)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,tail)
+importFrom(utils,txtProgressBar)
