RangedData is on removal removed from the main GenometriCorrelation; docs are updated

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,6 +4,7 @@ export(GenometriCorrelation)
 export(MapRangesToGenomicIntervals)
 export(VisualiseTwoGRanges)
 export(VisualiseTwoIRanges)
+export(WriteChainFromGRanges)
 exportClasses(GenometriCorrConfig)
 exportClasses(GenometriCorrResult)
 exportMethods(graphical.report)
