--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -15,6 +15,7 @@ import(GenomicFeatures)
 import(GenomicRanges)
 import(IRanges)
 import(methods)
+import(plyranges)
 importFrom(GenomeInfoDb,"seqlevels<-")
 importFrom(GenomeInfoDb,seqlengths)
 importFrom(GenomeInfoDb,seqlevels)
@@ -36,6 +37,7 @@ importFrom(graphics,plot.new)
 importFrom(graphics,rasterImage)
 importFrom(graphics,text)
 importFrom(graphics,xinch)
+importFrom(gtools,mixedsort)
 importFrom(rtracklayer,import)
 importFrom(stats,ecdf)
 importFrom(stats,integrate)
