The GenomtriCorrelation docs is under moving to eoxygen2

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -15,7 +15,6 @@ import(GenomicFeatures)
 import(GenomicRanges)
 import(IRanges)
 import(methods)
-import(plyranges)
 importFrom(GenomeInfoDb,"seqlevels<-")
 importFrom(GenomeInfoDb,seqlengths)
 importFrom(GenomeInfoDb,seqlevels)
@@ -38,6 +37,7 @@ importFrom(graphics,rasterImage)
 importFrom(graphics,text)
 importFrom(graphics,xinch)
 importFrom(gtools,mixedsort)
+importFrom(plyranges,filter)
 importFrom(rtracklayer,import)
 importFrom(stats,ecdf)
 importFrom(stats,integrate)
