@import changed, we now import the whole plyranges

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -13,8 +13,8 @@ exportMethods(show)
 exportMethods(visualize)
 import(GenomicFeatures)
 import(GenomicRanges)
-import(IRanges)
 import(methods)
+import(plyranges)
 importFrom(GenomeInfoDb,"seqlevels<-")
 importFrom(GenomeInfoDb,seqlengths)
 importFrom(GenomeInfoDb,seqlevels)
@@ -37,7 +37,6 @@ importFrom(graphics,rasterImage)
 importFrom(graphics,text)
 importFrom(graphics,xinch)
 importFrom(gtools,mixedsort)
-importFrom(plyranges,filter)
 importFrom(rtracklayer,import)
 importFrom(stats,ecdf)
 importFrom(stats,integrate)
