a lot of samall chges and typos. %>% removed

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -11,8 +11,10 @@ exportMethods(graphical.report)
 exportMethods(run.config)
 exportMethods(show)
 exportMethods(visualize)
+import(BiocGenerics)
 import(GenomicFeatures)
 import(GenomicRanges)
+import(magrittr)
 import(methods)
 import(plyranges)
 importFrom(GenomeInfoDb,"seqlevels<-")
