Drafted mapping with docs

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,7 +4,6 @@ export(GenometriCorrelation)
 export(MapRangesToGenomicIntervals)
 export(VisualiseTwoGRanges)
 export(VisualiseTwoIRanges)
-export(WriteChainFromGRanges)
 exportClasses(GenometriCorrConfig)
 exportClasses(GenometriCorrResult)
 exportMethods(graphical.report)
@@ -17,6 +16,7 @@ import(GenomicRanges)
 import(magrittr)
 import(methods)
 import(plyranges)
+import(rtracklayer)
 importFrom(GenomeInfoDb,"seqlevels<-")
 importFrom(GenomeInfoDb,seqlengths)
 importFrom(GenomeInfoDb,seqlevels)
