alternative parameter is tested for making sense

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -46,6 +46,8 @@ importFrom(stats,ks.test)
 importFrom(stats,pbinom)
 importFrom(stats,punif)
 importFrom(stats,runif)
+importFrom(stringr,str_c)
+importFrom(stringr,str_detect)
 importFrom(tcltk,getTkProgressBar)
 importFrom(tcltk,setTkProgressBar)
 importFrom(tcltk,tkProgressBar)
